[package]
name = "rsx-fonts"
version = "0.1.0"
authors = ["Victor Porof <victor.porof@gmail.com>"]

[lib]
name = "rsx_fonts"

[features]
default = ["link-freetype"]
link-freetype = ["freetype/servo-freetype-sys"]

[dependencies]
base64-util = { path = "../base64-util" }
bitflags = "1.0"
fnv = "1.0.6"
freetype = { version = "0.3.0", default-features = false }
rsx-resource-updates = { path = "../rsx-resource-updates", default-features = false }
rsx-shared = { git = "https://github.com/victorporof/rsx-shared.git", default-features = false }
serde = { version = "1.0.27", features = ["rc"] }
serde_derive = "1.0.27"
uuid = { version = "0.5.1", features = ["v4"] }

[dev-dependencies]
rsx-resource-updates = { path = "../rsx-resource-updates" }